# onnxruntime_utilities

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
examples/: export_sample.py
onnxruntime_utilities/: __ini__.py  __init__.py  inferencer.py  loader.py  summarize.py
onnxruntime_utilities/converter/: __init__.py  quantize.py
onnxruntime_utilities/exporter/: __init__.py  torch_exporter.py
