[tool.poetry]
name = "onnxruntime-utils"
version = "0.1.0"
description = ""
authors = ["Daisuke AKAGAWA <daisuke1024akagawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
onnxruntime = "^1.17.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
