[tool.poetry]
name = "onnxruntime-utils"
version = "0.1.0"
description = ""
authors = ["Daisuke AKAGAWA <daisuke1024akagawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
onnxruntime = "^1.17.3"
onnx = "^1.16.1"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
